--- a/wp-content/themes/vanguard-history/css/_var.scss
+++ b/wp-content/themes/vanguard-history/css/_var.scss
@@ -13,7 +13,7 @@ $scale: 2 !default;
 
 // breakpoints// from device width https://semantic-ui.com/elements/container.html
 $bp--xs: 320px;
-$bp--sm: 768px;
+$bp--sm: 955px;
 $bp--md: 992px;
 $bp--lg: 1200px;
 $bp--xl: 1920px;
